--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: pvcarrera
-github_username:  jekyll
+github_username:  pvcarrera
 
 # Build settings
 markdown: kramdown
