--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: vicapa99@gmail.com
 description: >
   Thoughts of a mountain based software developer.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://pvcarrera.github.com"
 twitter_username: pvcarrera
 github_username:  pvcarrera
 
